[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoke"
version = "0.1.0"
description = "Convert natural language to shell commands using OpenAI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
zoke = "zoke.cli:main"

[tool.setuptools.packages.find]
where = ["."]
